syntax = "proto3";

package yrclient;

import "google/protobuf/any.proto";

enum ResponseCode {
  OK = 0;
  ERROR = 1;
}

message Response {
  optional ResponseCode code = 1;
  google.protobuf.Any body = 2;
}

enum CommandType {
  CLOSE = 0;
  RELOAD = 1;
  SHUTDOWN = 2;
  CLIENT_COMMAND = 3;
  POLL = 4;
}

// TODO: no need for separate error message types...
message TextResponse {
  optional string message = 1;
}

message ErrorResponse {
  optional string error_message = 1;
}

message RunCommandAck {
  optional int64 id = 1;
}

message CommandResult {
  optional bytes data = 1;
  ResponseCode result_code = 2;
}

message CommandPollResult {
  repeated CommandResult results = 1;
}

message Command {
  message ClientCommand {
    optional string name = 1;
    optional string args = 2;
  }
  optional CommandType command_type = 1;
  optional ClientCommand client_command = 2;
}

message RpcRequest {
  string data = 1;
}

message GameState {
  uint32 current_frame = 1;
}

service ReadGameState {
  rpc ReadGameState(RpcRequest) returns (GameState);
}
